# space-shooter-game

./: AGENTS.md  CMakeLists.txt  README.md  main.cpp  run.sh
.cache/clangd/index/: main.cpp.F6819486820AB9FA.idx
src/: GameManager.cpp  GameManager.h  GameWindow.cpp  GameWindow.h  enemy.cpp  enemy.h  enemy_manager.cpp  enemy_manager.h  game_manager.cpp  game_manager.h  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h  spaceship.cpp  spaceship.h
